--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -43,7 +43,9 @@
     "react": "^17.0.0",
     "react-dev-inspector": "^1.8.1",
     "react-dom": "^17.0.0",
-    "react-helmet-async": "^1.3.0"
+    "react-helmet-async": "^1.3.0",
+    "md-editor": "workspace:*",
+    "ui": "workspace:*"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.0",
