--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "mdore": "workspace:*",
+    "md-editor": "workspace:*",
     "ui": "workspace:*"
   },
   "devDependencies": {
