--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,26 +3,43 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev -p 3030",
+    "lint": "next lint",
+    "start": "next start -p 3030"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.4",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "ahooks": "^3.7.2",
+    "classnames": "^2.3.2",
+    "express": "^4.18.2",
+    "express-jwt": "^7.7.7",
+    "lodash": "^4.17.21",
+    "md-editor": "workspace:*",
+    "moment": "^2.29.4",
+    "mongodb": "^4.12.1",
+    "mongoose": "^6.7.3",
     "next": "13.0.0",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "md-editor": "workspace:*",
-    "ui": "workspace:*"
+    "tailwindcss": "^3.2.4",
+    "ui": "workspace:*",
+    "umi-request": "^1.4.0",
+    "vh-check": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
-    "eslint": "7.32.0",
-    "tsconfig": "workspace:*",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^17.0.12",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "eslint": "7.32.0",
+    "eslint-config-custom": "workspace:*",
+    "tsconfig": "workspace:*",
     "typescript": "^4.5.3"
   }
 }
