--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,9 @@
   "name": "web",
   "version": "0.0.0",
   "private": true,
+  "browser": {
+    "fs": false
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev -p 3030",
@@ -15,6 +18,7 @@
     "classnames": "^2.3.2",
     "express": "^4.18.2",
     "express-jwt": "^7.7.7",
+    "focus-visible": "^5.2.0",
     "lodash": "^4.17.21",
     "md-editor": "workspace:*",
     "moment": "^2.29.4",
