--- a/packages/md-editor/package.json
+++ b/packages/md-editor/package.json
@@ -2,10 +2,11 @@
   "name": "md-editor",
   "version": "0.0.0",
   "license": "MIT",
-  "main": "./index.tsx",
-  "types": "./index.tsx",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "lint": "eslint *.ts*"
+    "build": "tsup src/index.ts --format cjs --dts",
+    "dev": "npm run build --watch"
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
@@ -40,6 +41,7 @@
     "eslint-config-custom": "workspace:*",
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
+    "tsup": "^6.5.0",
     "typescript": "^4.5.2"
   }
 }
