--- a/packages/md-editor/package.json
+++ b/packages/md-editor/package.json
@@ -39,9 +39,12 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
-    "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "tsup": "^6.5.0",
     "typescript": "^4.5.2"
+  },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   }
 }
