--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ui",
   "version": "0.0.0",
+  "license": "MIT",
   "main": "./index.tsx",
   "types": "./index.tsx",
-  "license": "MIT",
   "scripts": {
     "lint": "eslint *.ts*"
   },
@@ -12,8 +12,11 @@
     "@types/react-dom": "^18.0.6",
     "eslint": "^7.32.0",
     "eslint-config-custom": "workspace:*",
-    "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2"
+  },
+  "peerDependencies": {
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   }
 }
